# wp-auto-poster

./: .gitignore  CLAUDE.md  README.md  wp-article-themes-cat7-9-improved.md  wp-article-themes-detailed.md  wp-auto-poster-plan-v2.md  wp-auto-poster-plan.md
.claude/agents/codex-outline-planner/: codex-outline-planner.md
.claude/agents/codex-researcher/: codex-researcher.md
.claude/agents/wp-affiliate-linker/: wp-affiliate-linker.md
.claude/agents/wp-article-writer/: wp-article-writer.md
.claude/agents/wp-image-generator/: wp-image-generator.md
.claude/agents/wp-publisher/: wp-publisher.md
.claude/agents/wp-seo-reviewer/: wp-seo-reviewer.md
.claude/skills/blog-analytics/: SKILL.md
.claude/skills/gemini-image/: SKILL.md
.claude/skills/generate-post/: SKILL.md
docs/: wp-auto-post-skill-guide.md
reports/: blog-analytics-2026-03-12.md
research/: claude-skills-agents-research.md  gemini-api-research.md  mermaid-research.md  wordpress-api-research.md
tasks/: sns-strategy.md  todo.md
wp-auto-poster/: .env.example  .gitignore  image_results.json  mermaid-config.json  pyproject.toml  requirements.txt  update_eyecatch.py
wp-auto-poster/lib/: __init__.py  affiliate_linker.py  config.py  image_client.py  mermaid_playwright.py  mermaid_renderer.py  screenshot_capturer.py  usage_tracker.py  wp_client.py
wp-auto-poster/lib/_deprecated/: mermaid_renderer.py
wp-auto-poster/output/: affiliate_requests.json  article_claude_md_guide.html  image_requests.json  meta_claude_md_guide.json
wp-auto-poster/templates/: __init__.py  cocoon_blocks.py
(+4 files in other folders)
